--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "koa-views": "^8.1.0",
     "koa2-cors": "^2.0.6",
     "moment-timezone": "^0.5.45",
+    "mongodb": "^6.10.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "nodemon": "^2.0.22",
     "prettier": "^3.1.1",
     "socks-proxy-agent": "^8.0.5",
+    "@vercel/functions": "^2.0.0",
     "xmldom": "^0.6.0",
     "xpath": "^0.0.34"
   }
